# PyNN

./: .gitignore  ANN.py  MLANN.py  README.md  matrix.py  pyproject.toml
.github/workflows/: publish.yml
src/: MLANN.py  __init__.py  sigmoid.py
